--- a/hr-net/package.json
+++ b/hr-net/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-react-modal-js",
+  "name": "hr-net",
   "version": "0.2.3",
   "description": "Simple modal for React. Used for a school project",
   "author": "Anthony Colas",
@@ -26,7 +26,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.5.6",
-    "simple-react-modal-js": "^0.1.0",
+    "simple-react-modal-js": "^0.2.4",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
